@@ -4,6 +4,7 @@ Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.0-xxxx, 2011-xx-xx
 ------------------------------
+#1248366 by Dave Reid: Fix declaration of getInfo() test functions.
 #1219178 by cpliakas: Added support for customizable minimum facet counts.
 #1216184 by cpliakas: remove unneeded static variable.
 #1204450 by blazey: fix for parameter error in apachesolr_taxonomy module.
